--- a/public/css/app.css
+++ b/public/css/app.css
@@ -539,6 +539,10 @@ video {
   }
 }
 
+.static {
+  position: static;
+}
+
 .fixed {
   position: fixed;
 }
@@ -588,6 +592,10 @@ video {
   right: 2.5rem;
 }
 
+.right-2 {
+  right: 0.5rem;
+}
+
 .right-5 {
   right: 1.25rem;
 }
@@ -616,24 +624,32 @@ video {
   top: 440px;
 }
 
-.right-2 {
-  right: 0.5rem;
+.left-5 {
+  left: 1.25rem;
 }
 
 .z-10 {
   z-index: 10;
 }
 
+.z-0 {
+  z-index: 0;
+}
+
+.z-20 {
+  z-index: 20;
+}
+
 .z-30 {
   z-index: 30;
 }
 
-.col-span-3 {
-  grid-column: span 3 / span 3;
-}
-
 .col-span-2 {
   grid-column: span 2 / span 2;
+}
+
+.col-span-3 {
+  grid-column: span 3 / span 3;
 }
 
 .m-4 {
@@ -687,6 +703,10 @@ video {
   margin-left: 0px;
 }
 
+.ml-1 {
+  margin-left: 0.25rem;
+}
+
 .ml-10 {
   margin-left: 2.5rem;
 }
@@ -721,6 +741,10 @@ video {
 
 .ml-80 {
   margin-left: 20rem;
+}
+
+.mr-1 {
+  margin-right: 0.25rem;
 }
 
 .mr-2 {
@@ -811,28 +835,188 @@ video {
   margin-top: 2rem;
 }
 
-.mr-1 {
-  margin-right: 0.25rem;
+.mr-10 {
+  margin-right: 2.5rem;
 }
 
-.ml-1 {
-  margin-left: 0.25rem;
+.mr-\[\] {
+  margin-right: ;
 }
 
-.mb-\[\] {
-  margin-bottom: ;
+.mr-\[30\] {
+  margin-right: 30;
 }
 
-.mb-\[600\] {
-  margin-bottom: 600;
+.mr-\[30px\] {
+  margin-right: 30px;
 }
 
-.mb-\[600px\] {
-  margin-bottom: 600px;
+.ml-\[30px\] {
+  margin-left: 30px;
 }
 
-.ml-auto {
-  margin-left: auto;
+.-ml-10 {
+  margin-left: -2.5rem;
+}
+
+.-ml-1 {
+  margin-left: -0.25rem;
+}
+
+.-ml-12 {
+  margin-left: -3rem;
+}
+
+.-ml-20 {
+  margin-left: -5rem;
+}
+
+.-ml-\[200px\] {
+  margin-left: -200px;
+}
+
+.-ml-\[300px\] {
+  margin-left: -300px;
+}
+
+.-ml-\[0px\] {
+  margin-left: -0px;
+}
+
+.-ml-\[450px\] {
+  margin-left: -450px;
+}
+
+.mt-\[\] {
+  margin-top: ;
+}
+
+.mt-\[200\] {
+  margin-top: 200;
+}
+
+.mt-\[200px\] {
+  margin-top: 200px;
+}
+
+.ms-\[\] {
+  margin-inline-start: ;
+}
+
+.ms-\[30\] {
+  margin-inline-start: 30;
+}
+
+.ms-\[30px\] {
+  margin-inline-start: 30px;
+}
+
+.-ml-\[20p\] {
+  margin-left: -20p;
+}
+
+.-ml-\[20px\] {
+  margin-left: -20px;
+}
+
+.-ml-\[3\] {
+  margin-left: -3;
+}
+
+.-ml-\[35px\] {
+  margin-left: -35px;
+}
+
+.-ml-\[40px\] {
+  margin-left: -40px;
+}
+
+.-ml-\[100px\] {
+  margin-left: -100px;
+}
+
+.mt-\[50px\] {
+  margin-top: 50px;
+}
+
+.mt-\[100px\] {
+  margin-top: 100px;
+}
+
+.mt-\[px\] {
+  margin-top: px;
+}
+
+.mt-\[500px\] {
+  margin-top: 500px;
+}
+
+.-mt-\[50\] {
+  margin-top: -50;
+}
+
+.-mt-\[50px\] {
+  margin-top: -50px;
+}
+
+.-mt-\[100px\] {
+  margin-top: -100px;
+}
+
+.-mt-\[150px\] {
+  margin-top: -150px;
+}
+
+.-mt-\[200px\] {
+  margin-top: -200px;
+}
+
+.-mt-\[250px\] {
+  margin-top: -250px;
+}
+
+.mt-\[220px\] {
+  margin-top: 220px;
+}
+
+.mt-\[230px\] {
+  margin-top: 230px;
+}
+
+.-mt-\[260px\] {
+  margin-top: -260px;
+}
+
+.-mt-9 {
+  margin-top: -2.25rem;
+}
+
+.-mt-\[260\] {
+  margin-top: -260;
+}
+
+.-mt-\[360px\] {
+  margin-top: -360px;
+}
+
+.ml-6 {
+  margin-left: 1.5rem;
+}
+
+.-ml-9 {
+  margin-left: -2.25rem;
+}
+
+.-ml-11 {
+  margin-left: -2.75rem;
+}
+
+.-ml-\[20\] {
+  margin-left: -20;
+}
+
+.-ml-\[60px\] {
+  margin-left: -60px;
 }
 
 .block {
@@ -875,6 +1059,10 @@ video {
   height: 5rem;
 }
 
+.h-24 {
+  height: 6rem;
+}
+
 .h-28 {
   height: 7rem;
 }
@@ -911,6 +1099,10 @@ video {
   height: 20rem;
 }
 
+.h-96 {
+  height: 24rem;
+}
+
 .h-\[850px\] {
   height: 850px;
 }
@@ -921,26 +1113,6 @@ video {
 
 .h-screen {
   height: 100vh;
-}
-
-.h-52 {
-  height: 13rem;
-}
-
-.h-96 {
-  height: 24rem;
-}
-
-.h-24 {
-  height: 6rem;
-}
-
-.h-1 {
-  height: 0.25rem;
-}
-
-.h-14 {
-  height: 3.5rem;
 }
 
 .min-h-screen {
@@ -969,6 +1141,10 @@ video {
 
 .w-20 {
   width: 5rem;
+}
+
+.w-24 {
+  width: 6rem;
 }
 
 .w-28 {
@@ -1011,6 +1187,10 @@ video {
   width: 15rem;
 }
 
+.w-72 {
+  width: 18rem;
+}
+
 .w-8 {
   width: 2rem;
 }
@@ -1027,6 +1207,10 @@ video {
   width: 400px;
 }
 
+.w-\[50px\] {
+  width: 50px;
+}
+
 .w-full {
   width: 100%;
 }
@@ -1035,48 +1219,44 @@ video {
   width: 100vw;
 }
 
-.w-52 {
-  width: 13rem;
+.w-\[100px\] {
+  width: 100px;
 }
 
-.w-24 {
-  width: 6rem;
+.w-\[0px\] {
+  width: 0px;
 }
 
-.w-14 {
-  width: 3.5rem;
+.w-\[200px\] {
+  width: 200px;
+}
+
+.w-\[150px\] {
+  width: 150px;
+}
+
+.w-\[250px\] {
+  width: 250px;
+}
+
+.w-\[280px\] {
+  width: 280px;
 }
 
 .w-\[\] {
   width: ;
 }
 
-.w-\[calc\] {
-  width: calc;
+.w-\[220px\] {
+  width: 220px;
 }
 
-.w-\[calc\(100\)\] {
-  width: calc(100);
+.w-\[180px\] {
+  width: 180px;
 }
 
-.w-\[calc\(100\%-3\.73\)\] {
-  width: calc(100% - 3.73);
-}
-
-.w-\[calc\(100\%-3\.73rem\)\] {
-  width: calc(100% - 3.73rem);
-}
-
-.w-\[calc\(100\%-\)\] {
-  width: calc(100% - );
-}
-
-.w-\[calc\(3\.73rem\)\] {
-  width: calc(3.73rem);
-}
-
-.w-72 {
-  width: 18rem;
+.w-\[10px\] {
+  width: 10px;
 }
 
 .max-w-5xl {
@@ -1118,6 +1298,10 @@ video {
   cursor: pointer;
 }
 
+.grid-cols-10 {
+  grid-template-columns: repeat(10, minmax(0, 1fr));
+}
+
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
@@ -1128,10 +1312,6 @@ video {
 
 .grid-cols-6 {
   grid-template-columns: repeat(6, minmax(0, 1fr));
-}
-
-.grid-cols-10 {
-  grid-template-columns: repeat(10, minmax(0, 1fr));
 }
 
 .grid-rows-2 {
@@ -1146,16 +1326,8 @@ video {
   flex-direction: column;
 }
 
-.items-end {
-  align-items: flex-end;
-}
-
 .items-center {
   align-items: center;
-}
-
-.justify-end {
-  justify-content: flex-end;
 }
 
 .justify-center {
@@ -1176,6 +1348,10 @@ video {
 
 .gap-10 {
   gap: 2.5rem;
+}
+
+.gap-12 {
+  gap: 3rem;
 }
 
 .gap-14 {
@@ -1200,10 +1376,6 @@ video {
 
 .gap-6 {
   gap: 1.5rem;
-}
-
-.gap-12 {
-  gap: 3rem;
 }
 
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
@@ -1240,12 +1412,6 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(2rem * var(--tw-space-y-reverse));
-}
-
-.space-y-6 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
 }
 
 .overflow-hidden {
@@ -1316,14 +1482,6 @@ video {
   border-bottom-width: 1px;
 }
 
-.border-r {
-  border-right-width: 1px;
-}
-
-.border-dashed {
-  border-style: dashed;
-}
-
 .border-blue-300 {
   --tw-border-opacity: 1;
   border-color: rgb(147 197 253 / var(--tw-border-opacity, 1));
@@ -1332,11 +1490,6 @@ video {
 .border-gray-300 {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity, 1));
-}
-
-.border-gray-500 {
-  --tw-border-opacity: 1;
-  border-color: rgb(107 114 128 / var(--tw-border-opacity, 1));
 }
 
 .border-gray-700 {
@@ -1369,10 +1522,6 @@ video {
   border-color: rgb(234 179 8 / var(--tw-border-opacity, 1));
 }
 
-.border-gray-300\/40 {
-  border-color: rgb(209 213 219 / 0.4);
-}
-
 .bg-\[\#01b14f\] {
   --tw-bg-opacity: 1;
   background-color: rgb(1 177 79 / var(--tw-bg-opacity, 1));
@@ -1386,6 +1535,11 @@ video {
 .bg-\[\#202528\] {
   --tw-bg-opacity: 1;
   background-color: rgb(32 37 40 / var(--tw-bg-opacity, 1));
+}
+
+.bg-\[\#ee4d2d\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(238 77 45 / var(--tw-bg-opacity, 1));
 }
 
 .bg-amber-800 {
@@ -1473,6 +1627,11 @@ video {
   background-color: rgb(185 28 28 / var(--tw-bg-opacity, 1));
 }
 
+.bg-slate-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 41 59 / var(--tw-bg-opacity, 1));
+}
+
 .bg-transparent {
   background-color: transparent;
 }
@@ -1509,47 +1668,6 @@ video {
 
 .bg-zinc-950\/\[0\.7\] {
   background-color: rgb(9 9 11 / 0.7);
-}
-
-.bg-\[\] {
-  background-color: ;
-}
-
-.bg-\[\#ee\] {
-  background-color: #ee;
-}
-
-.bg-\[\#ee4d\] {
-  background-color: #ee4d;
-}
-
-.bg-\[\#ee4d2d\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(238 77 45 / var(--tw-bg-opacity, 1));
-}
-
-.bg-\[\#\] {
-  background-color: #;
-}
-
-.bg-\[\#ee4d2c\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(238 77 44 / var(--tw-bg-opacity, 1));
-}
-
-.bg-\[\#eed\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(238 238 221 / var(--tw-bg-opacity, 1));
-}
-
-.bg-slate-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(51 65 85 / var(--tw-bg-opacity, 1));
-}
-
-.bg-slate-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(30 41 59 / var(--tw-bg-opacity, 1));
 }
 
 .bg-opacity-0 {
@@ -1666,6 +1784,11 @@ video {
   padding: 1.75rem;
 }
 
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+
 .px-10 {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
@@ -1674,6 +1797,11 @@ video {
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
+}
+
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 
 .px-4 {
@@ -1731,16 +1859,6 @@ video {
   padding-bottom: 2rem;
 }
 
-.px-1 {
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
-}
-
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
-
 .pb-3 {
   padding-bottom: 0.75rem;
 }
@@ -1781,10 +1899,6 @@ video {
   padding-top: 0.75rem;
 }
 
-.pb-6 {
-  padding-bottom: 1.5rem;
-}
-
 .text-left {
   text-align: left;
 }
@@ -1801,14 +1915,6 @@ video {
   font-family: Poppins;
 }
 
-.font-\[\] {
-  font-family: ;
-}
-
-.font-\[Po\] {
-  font-family: Po;
-}
-
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
@@ -1822,6 +1928,11 @@ video {
 .text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
+}
+
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
 }
 
 .text-7xl {
@@ -1875,11 +1986,6 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
-}
-
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
 }
 
 .text-\[22px\] {
@@ -1987,6 +2093,11 @@ video {
   color: rgb(21 128 61 / var(--tw-text-opacity, 1));
 }
 
+.text-indigo-600 {
+  --tw-text-opacity: 1;
+  color: rgb(79 70 229 / var(--tw-text-opacity, 1));
+}
+
 .text-orange-400 {
   --tw-text-opacity: 1;
   color: rgb(251 146 60 / var(--tw-text-opacity, 1));
@@ -1995,6 +2106,11 @@ video {
 .text-orange-500 {
   --tw-text-opacity: 1;
   color: rgb(249 115 22 / var(--tw-text-opacity, 1));
+}
+
+.text-orange-600 {
+  --tw-text-opacity: 1;
+  color: rgb(234 88 12 / var(--tw-text-opacity, 1));
 }
 
 .text-pink-500 {
@@ -2025,25 +2141,6 @@ video {
 .text-yellow-500 {
   --tw-text-opacity: 1;
   color: rgb(234 179 8 / var(--tw-text-opacity, 1));
-}
-
-.text-indigo-600 {
-  --tw-text-opacity: 1;
-  color: rgb(79 70 229 / var(--tw-text-opacity, 1));
-}
-
-.text-orange-600 {
-  --tw-text-opacity: 1;
-  color: rgb(234 88 12 / var(--tw-text-opacity, 1));
-}
-
-.text-green-200 {
-  --tw-text-opacity: 1;
-  color: rgb(187 247 208 / var(--tw-text-opacity, 1));
-}
-
-.text-\[px\] {
-  color: px;
 }
 
 .opacity-90 {
@@ -2126,48 +2223,6 @@ video {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-@media (min-width: 1536px) {
-
-  .\32xl\:container {
-    width: 100%;
-  }
-
-  @media (min-width: 640px) {
-
-    .\32xl\:container {
-      max-width: 640px;
-    }
-  }
-
-  @media (min-width: 768px) {
-
-    .\32xl\:container {
-      max-width: 768px;
-    }
-  }
-
-  @media (min-width: 1024px) {
-
-    .\32xl\:container {
-      max-width: 1024px;
-    }
-  }
-
-  @media (min-width: 1280px) {
-
-    .\32xl\:container {
-      max-width: 1280px;
-    }
-  }
-
-  @media (min-width: 1536px) {
-
-    .\32xl\:container {
-      max-width: 1536px;
-    }
-  }
-}
-
 .placeholder\:font-light::-moz-placeholder {
   font-weight: 300;
 }
@@ -2184,10 +2239,6 @@ video {
 .placeholder\:text-\[\#8c8c8c\]::placeholder {
   --tw-text-opacity: 1;
   color: rgb(140 140 140 / var(--tw-text-opacity, 1));
-}
-
-.hover\:w-56:hover {
-  width: 14rem;
 }
 
 .hover\:scale-105:hover {
@@ -2246,6 +2297,11 @@ video {
   color: rgb(0 0 0 / var(--tw-text-opacity, 1));
 }
 
+.hover\:text-gray-300:hover {
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity, 1));
+}
+
 .hover\:text-gray-600:hover {
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity, 1));
@@ -2261,34 +2317,12 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
-.hover\:text-gray-300:hover {
-  --tw-text-opacity: 1;
-  color: rgb(209 213 219 / var(--tw-text-opacity, 1));
-}
-
 .hover\:underline:hover {
   text-decoration-line: underline;
 }
 
-.hover\:shadow:hover {
-  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.hover\:shadow-2xl:hover {
-  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
-  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .focus\:border-none:focus {
   border-style: none;
-}
-
-.focus\:bg-slate-700:focus {
-  --tw-bg-opacity: 1;
-  background-color: rgb(51 65 85 / var(--tw-bg-opacity, 1));
 }
 
 .focus\:outline-none:focus {
@@ -2459,11 +2493,6 @@ video {
     padding-left: 7rem;
     padding-right: 7rem;
   }
-
-  .lg\:px-12 {
-    padding-left: 3rem;
-    padding-right: 3rem;
-  }
 }
 
 @media (min-width: 1280px) {
@@ -2471,33 +2500,6 @@ video {
   .xl\:text-lg {
     font-size: 1.125rem;
     line-height: 1.75rem;
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-
-  .dark\:border {
-    border-width: 1px;
-  }
-
-  .dark\:border-gray-700 {
-    --tw-border-opacity: 1;
-    border-color: rgb(55 65 81 / var(--tw-border-opacity, 1));
-  }
-
-  .dark\:bg-gray-900 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(17 24 39 / var(--tw-bg-opacity, 1));
-  }
-
-  .dark\:text-gray-200 {
-    --tw-text-opacity: 1;
-    color: rgb(229 231 235 / var(--tw-text-opacity, 1));
-  }
-
-  .dark\:text-green-200 {
-    --tw-text-opacity: 1;
-    color: rgb(187 247 208 / var(--tw-text-opacity, 1));
   }
 }
 
